fix overflow

--- a/day9/src/seller.css
+++ b/day9/src/seller.css
@@ -8,8 +8,6 @@
 	background-attachment: fixed;
 	height: 40%;
 	position: relative;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
 }
 
 .seller__avatar {
