--- a/day9/src/styles.css
+++ b/day9/src/styles.css
@@ -21,6 +21,7 @@ body section {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	overflow: hidden;
 }
 
 h1 {
